--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
           <img class="contacts__map" src="img/map-mobile@1x.jpg" width="320" height="457" alt="карта">
         </picture>
-        <img class="contacts__map-pin" src="img/icon-map-pin.svg" srcset="img/video-mobile@2x.jpg 2x" width="67" height="100" alt="метка">
+        <img class="contacts__map-pin" src="img/icon-map-pin.svg" width="67" height="100" alt="метка">
         <a class="btn contacts__btn" href="">Напишите нам</a>
       </section>
     </main>
